--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql2": "^3.14.0",
+    "node-localstorage": "^3.0.5",
     "pg": "^8.14.1"
   }
 }
